--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,26 +137,36 @@ nav ul li a:active {
 
 }
 
+html {
+  background: #2d2b33;
+}
+
 body {
   height: 100vh;
-  background: #2d2b33;
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  font-weight: 300;
   color: #fff;
 }
 
-.h1-section {
+h1, h2 {
+  color: #9ba4c1;
+}
+
+.h1-section,
+.h2-section {
+  margin-bottom: 0.6em;
   font-family: "Tomorrow", "Rubik", Arial, Helvetica, sans-serif;
-  font-size: 2.2em;
   font-weight: 500;
   letter-spacing: 0.18em;
   text-transform: uppercase;
 }
 
+.h1-section {
+  font-size: 2.2em;
+}
+
 .h2-section {
-  font-family: "Tomorrow", "Rubik", Arial, Helvetica, sans-serif;
   font-size: 1.6em;
-  font-weight: 500;
-  letter-spacing: 0.18em;
-  text-transform: uppercase;
 }
 
 .section-normal {
@@ -261,3 +271,39 @@ nav ul li ul li a:hover {
 }
 
 */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+/* Modal Content */
+.modal-content {
+  background-color: #FEFEFE;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+/* The Close Button */
+.close {
+  color: #AAAAAA;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
