--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,12 +243,13 @@ h1, h2 {
   font-family: inherit;
   font-size: 1em;
   font-weight: 700;
-  transition: background 400ms;
+  transition: background 400ms, color 400ms;
 }
 
 .photo-gallery__content button:hover,
 .photo-gallery__content button:active {
   background: #191b25;
+  color: #ffe1a9;
 }
 
 .gallery-link {
@@ -266,6 +267,11 @@ h1, h2 {
   .information {
     grid-column: 2;
   }
+
+  .fun-fact {
+    grid-column: 2;
+    grid-row: 2;
+  }
   
   .column-1-objects {
     grid-column: 1;
@@ -279,84 +285,22 @@ h1, h2 {
   width: 100vw;
 }
 
-/*
-
-#title  {
-  text-align: center;
+.button-main {
+  padding: 1.4em 2.4em;
+  min-width: 2.4em;
+  border: none;
+  background: #14161e;
+  color: #9ba4c1;
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: 700;
+  transition: background 400ms, color 400ms;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*navbar styling */
-
-/*
-
-nav {
-  background: #2ba0db;
+.button-main:hover {
+  background: #191b25;
+  color: #ffe1a9;
 }
-
-nav ul {
-  font-size: 0;
-}
-
-nav ul li {
-  display: inline-block;
-  position: relative;
-}
-
-nav ul li a {
-  color: #fff;
-  display: block;
-  font-size: 14px;
-  padding: 15px 14px;
-  transition: 0.3s linear;
-}
-
-nav ul li:hover {
-  background: #126d9b;
-}
-
-nav ul li ul {
-  border-bottom: 5px solid #2ba0db;
-  display: none;
-  position: absolute;
-  width: 250px;
-}
-
-nav ul li ul li {
-  border-top: 1px solid #444;
-  display: block;
-}
-
-nav ul li ul li:first-child {
-  border-top: none;
-}
-
-nav ul li ul li a {
-  background: #373737;
-  display: block;
-  padding: 10px 14px;
-}
-
-nav ul li ul li a:hover {
-  background: #126d9b;
-}
-
-*/
 
 /* The Modal (background) */
 .modal {
@@ -372,24 +316,28 @@ nav ul li ul li a:hover {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
 /* Modal Content */
 .modal-content {
-  background-color: #FEFEFE;
+  background-color: #14161e;
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
+  border: 1px solid #1e222c;
   width: 80%;
+  color: #9ba4c1;
 }
+
 /* The Close Button */
 .close {
-  color: #AAAAAA;
+  color: #9ba4c1;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
+
 .close:hover,
 .close:focus {
-  color: #000;
+  color: #fff;
   text-decoration: none;
   cursor: pointer;
 }
